rule compostion class: parallel product for parameterized rules of pure bigraphs (tracking map and instantiation map are also updated/refined)